# stock-data-pipeline

./: Dockerfile  README.md  Untitled-1.ipynb  core.py  init.sql  main.py  prod_upload.py  pyproject.toml  tests.txt
